--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc index2.ts && node index2.js",
     "start3": "tsc index3.ts && node index3.js",
+    "start4": "tsc index4.ts && node index4.js",
     "watch": "tsc --watch"
   },
   "keywords": [],
