--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index1.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc index2.ts && node index2.js",
-    "start3": "tsc index3.ts && node index3.js",
-    "start4": "tsc index4.ts && node index4.js",
-    "start5": "tsc index5.ts && node index5.js",
+    "start": "tsc && node dist/index2.js",
+    "start3": "tsc && node dist/index3.js",
+    "start4": "tsc && node dist/index4.js",
+    "start5": "tsc && node dist/index5.js",
     "watch": "tsc --watch"
   },
   "keywords": [],
