--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es2016",                     // Version JS générée
+    "target": "ES2018",                     // Version JS générée
     "module": "commonjs",                   // Compatible avec Node.js
     "outDir": "dist",                       // Dossier de sortie des .js compilés
     "rootDir": ".",                       // Dossier source (optionnel mais conseillé)
