--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
     "plaintext": false,
     "markdown": false,
     "scminput": false,
-    "typescript": false,
+    "typescript": true,
     "css": false
   }
 }
