--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "start4": "tsc && node dist/index4.js",
     "start5": "tsc && node dist/index5.js",
     "start6": "tsc && node dist/index6.js",
+    "start7": "tsc && node dist/index7.js",
     "watch": "tsc --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC"
 }
-
-
