--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start5": "tsc && node dist/index5.js",
     "start6": "tsc && node dist/index6.js",
     "start7": "tsc && node dist/index7.js",
+    "start8": "tsc && node dist/index8.js",
     "watch": "tsc --watch"
   },
   "keywords": [],
