index8 : revision reverseANumber without convert in string and with a version with a classic loop and another with a for while loop

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
     "plaintext": false,
     "markdown": false,
     "scminput": false,
-    "typescript": true,
-    "css": false
+    "typescript": false,
+    "css": false,
+    "sql": false
   }
 }
