index7: function average

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,8 +6,12 @@
     "plaintext": false,
     "markdown": false,
     "scminput": false,
-    "typescript": false,
+    "typescript": true,
     "css": false,
-    "sql": false
+    "sql": false,
+    "ignore": true,
+    "typescriptreact": true,
+    "javascript": true,
+    "javascriptreact": true
   }
 }
