index8 : revise function average

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,12 +6,14 @@
     "plaintext": false,
     "markdown": false,
     "scminput": false,
-    "typescript": true,
+    "typescript": false,
     "css": false,
     "sql": false,
     "ignore": true,
     "typescriptreact": true,
     "javascript": true,
-    "javascriptreact": true
+    "javascriptreact": true,
+    "json": true,
+    "jsonc": true
   }
 }
