index10: revise function averageArray using a classic loop

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
     "javascript": false,
     "javascriptreact": true,
     "json": false,
-    "jsonc": true
+    "jsonc": true,
+    "properties": true
   }
 }
